# MM837_Computational_Physics

./: .gitignore  README.md
Assignment_1/: CMakeLists.txt  Program.cc  compile.py  forces.h  integrators.h  parameters.in  parameters.json  plot.py  plots.py  printresults.h  propagate.h  properties.h
Assignment_1/archive/save_for_now/serial_implementation/: forces.h  printresults.h  properties.h
Assignment_1/archive/serial_implementation/: Program.cc  plot.py
Assignment_1/forces/: forces.cc
Assignment_1/include/: forces.h  integrators.h  iocontrol.h  properties.h
Assignment_1/integrators/: integrators.cc
Assignment_1/iocontrol/: iocontrol.h
Assignment_1/properties/: printresults.cc  printresults.h  properties.cc  properties.h
Assignment_1/save_for_now/: Program.cc  printresults.h  properties.h  test.cc
Assignment_1/save_for_now/serial_implementation/: Program.cc  parameters.json
Assignment_1/serial_implementation/: Program.cc  forces.h  printresults.h
Assignment_1/src/: Program.cc  forces.cc  integrators.cc  properties.cc
Assignment_2/: CMakeLists.txt  parameters.json  plots.py
Assignment_2/include/: integrators.h  iocontrol.h  potentials.h  wavefunction.h
Assignment_2/src/: Program.cc  potentials.cc
Assignment_3/: CMakeLists.txt  parameters.json  plots.py
Assignment_3/include/: Lattice.h  Properties.h  Sweepers.h  iocontrol.h
Assignment_3/scr/: Lattice.cc  Program.cc  Properties.cc  Sweepers.cc  iocontrol.cc
Assignment_3/src/: Lattice.cc  Program.cc  Properties.cc  iocontrol.cc
Assignment_4/: CMakeLists.txt  parameters.json  plots.py
Assignment_4/include/: Lattice.h  Properties.h  iocontrol.h
Assignment_4/src/: Lattice.cc  Program.cc  Properties.cc  iocontrol.cc
Exercises/: Quadratic.cc  QuadraticClass.cc  Week36.cc  Week37.cc  templateQuadratic.cc
Exercises/MD/: Exercise_in_class.cc  constraints.h  euler_cromer.cc  examples.h  examples2.h  int_test.cc  int_test2.cc  integrators.h  naive_euler.cc  particle_box.cc  particle_box.py  (+4 more)
Hypothesis_Test_Example/: CMakeLists.txt  Week36.cc
MPI_Example/: num_integrationMPI.cc
OpenMP_Example/: num_integration.cc  num_integrationMP.cc
Unit_Test_Example/: CMakeLists.txt  Makefile  Quadratic.cc  testfailout.out  tests.cc
(+16 files in other folders)
